--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
             background-color: antiquewhite;
             padding: 10px;
             margin: 10px;
-            text-align: center; 
+            /* text-align: center;  */
         }
 
         .card3 {
